security: remove certificate and key files from repository
- Remove all .crt and .key files for security
- Update .gitignore to prevent future commits of sensitive files
- Certificates should be generated at runtime or deployment time

BREAKING: Certificate files no longer included in repository

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ go.work.sum
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Certificate and key files (security sensitive)
+*.crt
+*.key
+*.pem
+*.p12
+*.pfx
+*.cer
+*.der
